welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
  if (isMorning) {
    if (isMom) {return true}
    else {return false}}
  else {if (isAsleep) {return false}}
  else {return true}
}

       